Class for Controller

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,19 +14,19 @@ board = esp32dev
 framework = arduino
 
 [env:esp32dev_controller]
-build_src_filter = +<*> +<controller/> -<test_client/>
+build_src_filter = +<*> +<controller/> -<client_sender/> -<client_receiver/> -<client_sender_receiver/>
 upload_port = COM4
 ; needs BT and WiFi
 board_build.partitions = huge_app.csv
 
 [env:esp32dev_client_sender]
-build_src_filter = +<*> -<controller/> +<client_sender/>
+build_src_filter = +<*> -<controller/> +<client_sender/> -<client_receiver/> -<client_sender_receiver/>
 upload_port = COM19
 
 [env:esp32dev_client_receiver]
-build_src_filter = +<*> -<controller/> +<client_receiver/>
+build_src_filter = +<*> -<controller/> -<client_sender/> +<client_receiver/> -<client_sender_receiver/>
 upload_port = COM19
 
 [env:esp32dev_client_sender_receiver]
-build_src_filter = +<*> -<controller/> +<client_sender_receiver/>
+build_src_filter = +<*> -<controller/> -<client_sender/> -<client_receiver/> +<client_sender_receiver/>
 upload_port = COM19
