Client searches for Controller and pairs with it

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+build_flags = -DCORE_DEBUG_LEVEL=5
 
 [env:esp32dev_controller]
 build_src_filter = +<*> +<controller/> -<client_sender/> -<client_receiver/> -<client_sender_receiver/>
@@ -25,7 +26,7 @@ upload_port = COM4
 
 [env:esp32dev_client_receiver]
 build_src_filter = +<*> -<controller/> -<client_sender/> +<client_receiver/> -<client_sender_receiver/>
-upload_port = COM19
+upload_port = COM20
 
 [env:esp32dev_client_sender_receiver]
 build_src_filter = +<*> -<controller/> -<client_sender/> -<client_receiver/> +<client_sender_receiver/>
