Communication via ArduinoJson

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 build_flags = -DCORE_DEBUG_LEVEL=5
+lib_deps = ArduinoJson
 
 [env:esp32dev_controller]
 build_src_filter = +<*> +<controller/> -<client_sender/> -<client_receiver/> -<client_sender_receiver/>
