new directory structure with single device

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,19 +16,11 @@ build_flags = -DCORE_DEBUG_LEVEL=5
 lib_deps = ArduinoJson
 
 [env:esp32dev_controller]
-build_src_filter = +<*> +<controller/> -<client_sender/> -<client_receiver/> -<client_sender_receiver/>
+build_src_filter = +<*> +<controller/> -<device/>
 upload_port = COM4
 ; needs BT and WiFi
 board_build.partitions = huge_app.csv
 
-[env:esp32dev_client_sender]
-build_src_filter = +<*> -<controller/> +<client_sender/> -<client_receiver/> -<client_sender_receiver/>
-upload_port = COM4
-
-[env:esp32dev_client_receiver]
-build_src_filter = +<*> -<controller/> -<client_sender/> +<client_receiver/> -<client_sender_receiver/>
+[env:esp32dev_device]
+build_src_filter = +<*> -<controller/> +<device/>
 upload_port = COM20
-
-[env:esp32dev_client_sender_receiver]
-build_src_filter = +<*> -<controller/> -<client_sender/> -<client_receiver/> +<client_sender_receiver/>
-upload_port = COM19
